$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.310 2006/02/22 14:46:44 ph10 Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.61
-----------------

PH/01 The code for finding all the local interface addresses on a FreeBSD
      system running IPv6 was broken. This may well have applied to all BSD
      systems, as well as to others that have similar system calls. The broken
      code found IPv4 interfaces correctly, but gave incorrect values for the
      IPv6 interfaces. In particular, ::1 was not found. The effect in Exim was
      that it would not match correctly against @[] and not recognize the IPv6
      addresses as local.

PH/02 The ipliteral router was not recognizing addresses of the form user@
      [ipv6:....] because it didn't know about the "ipv6:" prefix.

PH/03 Added disable_ipv6.

PH/04 Changed $reply_address to use the raw form of the headers instead of the
      decoded form, because it is most often used to construct To: headers
      lines in autoreplies, and the decoded form may well be syntactically
      invalid. However, $reply_address has leading white space removed, and all
      newlines turned into spaces so that the autoreply transport does not
      grumble.

PH/05 If group was specified without a user on a router, and no group or user
      was specified on a transport, the group from the router was ignored.

PH/06 Increased the number of ACL variables to 20 of each type, and arranged
      for visible compile-time settings that can be used to change these
      numbers, for those that want even more. Backwards compatibility with old
      spool files has been maintained. However, going back to a previous Exim
      release will lost any variables that are in spool files.

PH/07 Two small changes when running in the test harness: increase delay when
      passing a TCP/IP connection to a new process, in case the original